[NM-274] Refactor build layout – flatten project and reuse parent POM dependencies